# dotfiles

./: .aliases  .autotest  .exports  .gitignore  .gitmodules  .vimperatorrc  .vimrc  .zshrc  README.md  Rakefile  Xmodmap  aliases  autotest  caprc  checkbox.xml  emacs  exports  gitrc  globalrc  gvimrc  hyper.js  irbrc  npmrc  nvm.sh.patch_to_zsh  private.xml  pryrc  railsrc  rubocop.yml  tmux.conf  tridactylrc  use_rvm  use_virtualenv  vimperatorrc  vimrc  zshenv  zshrc
.config/fish/: config.fish  fish_history  fishd.122x220x26x243.ap122.ftth.ucom.
.vim/: .netrwhist
.vim/colors/: billw.vim
.vim/plugin/: opsplorer.vim  rspec.vim  srcexpl.vim
Aquaskk/: keymap.conf
KeyRemap4MacBook-6.4.0/pkginfo/: Info.plist
config/MonoDevelop-Unity/: DefaultPolicies.xml  EditingLayout2.xml  MonoDevelopProperties.xml.previous  addins-setup.config
config/configstore/: insight-bower.yml  insight-yo.yml  update-notifier-bower.yml  update-notifier-yo.yml
config/fish/: config.fish  fish_plugins  fish_variables  fishfile
config/gtk-2.0/: gtkfilechooser.ini
config/inkscape/: preferences.xml
config/karabiner/: karabiner.json
config/peco/: config.json
config/xbuild/: pkgconfig-cache-2.xml
doc/: ruby-refm  std.hpp  std.hpp.pch
doc/ruby-refm-mydict/: ACL
emacs.d/: .gitignore  .session  abbrev_defs  clang-complete  init.el  recentf
emacs.d/conf/: flycheck_init-paren.el  init-abbrves.elc  init-acp.el  init-anything.el  init-anything.elc  init-auto-complete.el  init-autocomplete  init-autocomplete.el  init-autocomplete.elc  init-autosave-buffers.el  init-c.el  init-c.elc  init-cc.el  init-coffee.el  init-color.el  init-color.elc  init-csharp.el  init-css.el  init-css.elc  init-dired.el  init-dired.elc  init-elscreen.elc  init-env.el  init-evernote.el  init-expand-region.el  init-ffap.el  init-flex-autopair.el  init-flycheck.el  init-flymake.el  init-font.el  init-genkou.el  init-global.el  init-global.elc  init-glsl.el  init-go.el  init-haskell.elc  init-helm.el  init-highlighting.el  init-highlighting.elc  init-howm.el  (+73 more)
emacs.d/info/: dir  (+1 more)
opt/: rsense
screen/: .temp  common.screenrc  cpupct  cputemp  mempct  tempmonitor
src/: a.out  cpupct.c  mempct.c  nvm.sh.patch_to_zsh
src/migemo-0.40/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  config.cache  config.status  configure  configure.in  frequent-chars  genchars.sh  migemo  migemo-cache.rb  migemo-client  migemo-convert.rb  migemo-dict  migemo-dict.cache  migemo-dict.cache.idx  migemo-dict.idx  migemo-dict.rb  migemo-grep  migemo-index.rb  migemo-regex.rb  migemo-server  migemo.el.in  migemo.elc  migemo.ja.rd  migemo.rb  migemo.rb.in  ngram.sh  regex-dict.sample  user-dict.sample
src/migemo-0.40/tests/: Makefile  Makefile.am  Makefile.in  cache.sh  convert.sh  emacs-type.sh  insertion.sh  migemo.sh  regex-dict.sh  regex.sh  ruby-syntax.sh  symbols.sh  test-dict  test-dict.cache  test-dict.cache.idx  test-dict.idx  test.txt  user-dict.sh
terminal/: Staging.terminal
vim/: .VimballRecord  .netrwhist
vscode/: Application  keybindings.json  settings.json
zsh/: .zcompdump  alias.zsh  auto-fu-config.zsh  cdd.zsh  common.zsh  emacs.zsh  env.zsh  function.zsh  history  peco-config.zsh  term.zsh
(+16288 files in other folders)
